# beginner.codes-bot

./: Dockerfile  README.md  bot.yaml  dev.yaml  pyproject.toml  pyproject.toml.bak  testing.db
.github/workflows/: workflow.yaml
extensions/: birthday.py  boosters.py  bot_commands_cleanup.py  buddy.py  buddy_chat.py  challenges.py  dm_monitor.py  donating.py  good_reads.py  info.py  lol_streak.py  member_counter.py  message_binding.py  minecraft.py  new_members.py  premium_members.py  private_chat.py  setup_models.py  shared.py  topical_roles.py  voice_chat.py
extensions/bumping/: disboard.py  discord_me.py
extensions/help_channels/: channel_manager.py  rotator.py  topic_buttons.py
extensions/kudos/: achievements.py  extension.py  manager.py
extensions/mods/: auto_mod.py  commands.py  mod_manager.py  mod_settings.py  raid_protection.py
extensions/user_tracking/: extension.py  manager.py
manifests/: bot.yaml
