[tool.poetry]
package-mode = false
authors = ["Zech Zimmerman <hi@zech.codes>"]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
sqlalchemy = "^1.0"
psycopg2-binary = "^2.9.10"
arrow = "^1.3.0"
dippy-bot = "^0.1.1a28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
