[tool.poetry]
package-mode = false
name = "beginner.py"
version = "0.1.1-alpha.0"
description = ""
authors = ["Zech Zimmerman <hi@zech.codes>"]

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^1.4.1"
psycopg2-binary = "^2.8.6"
arrow = "^1.1.0"
nextcord = "^2.0.0-alpha.2"
"dippy.bot" = "^0.1.1-alpha.28"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
